# auto-trash-navigator

./: .gitignore  DEVELOPMENT_README.md  README.md  check_camera_image.py  clean_all.sh  collect_evidence.py  evaluate_mecanum.py  evidence_log.csv  fastdds_udp_only.xml  frames_2026-07-06_14.35.04.gv  frames_2026-07-06_14.36.47.gv  frames_2026-07-06_15.01.21.gv  frames_2026-07-06_15.01.54.gv  grid_search.py  image_synchronizer.py  nav_perf_log.csv  tune_mecanum.py  verify_final.py  verify_two_patterns.py  verify_wheels.py
6-arm-roboto/3Dmodel/: Base_J1.step  Finger_A.step  Finger_B.step  Forearm_J3J4.step  HandBase_J6.step  J2_Bracket.step  Pinion_Hand.step  TopPlate_J1.step  Turntable_J1.step  WristHub_J5.step  WristLink_J5J6.step
6-arm-roboto/blueprint/: BOM_robot_arm.csv  印刷組立ガイド.md
auto-trash-navigator/3Dmodel/6-arm-roboto/: UpperArm_J2J3.step
cmd/: cmd.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
maps/: my_map.pgm  my_map.yaml  office_map.pgm  office_map.yaml  test_map.pgm  test_map.yaml
src/amr_bringup/: CMakeLists.txt  package.xml
src/amr_bringup/config/: nav2_params.yaml  slam_params.yaml
src/amr_control/: CMakeLists.txt
src/amr_description/: CMakeLists.txt  package.xml
src/amr_moveit_config/: CMakeLists.txt  package.xml
src/amr_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  visual_amr.srdf
src/amr_moveit_config/launch/: move_group.launch.py
src/amr_vision/: CMakeLists.txt
src/minicar_simulation/: CMakeLists.txt  drive_node.py  package.xml
src/minicar_simulation/launch/: racetrack.launch.py  simulation.launch.py
src/minicar_simulation/urdf/: minicar.urdf.xacro
src/minicar_simulation/worlds/: simple_walled.world
(+99 files in other folders)
